--- a/src/app/hopdong/hopdong.component.html
+++ b/src/app/hopdong/hopdong.component.html
@@ -27,8 +27,8 @@
 
       <pre
         style="font-family: 'Times New Roman', Times, serif;font-size: 12pt;margin: 0;position: relative;"><span><b>BÊN A</b></span><span style="position: absolute;left: 90pt;">: <b>{{data.value.benA}}</b></span></pre>
-      <pre
-        style="font-family: 'Times New Roman', Times, serif;font-size: 12pt;margin: 0;position: relative;"><span>Địa chỉ</span><span style="position: absolute;left: 90pt;">: {{data.value.diaChiA}}</span></pre>
+      <p
+        style="font-family: 'Times New Roman', Times, serif;font-size: 12pt;margin: 0;position: relative;"><span>Địa chỉ</span><span style="margin-left: 55pt;">: {{data.value.diaChiA}}</span></p>
       <pre
         style="font-family: 'Times New Roman', Times, serif;font-size: 12pt;margin: 0;position: relative;"><span>Điện thoại</span><span style="position: absolute;left: 90pt;">: {{data.value.dienThoaiA}}</span></pre>
       <pre
