--- a/src/app/hopdong/hopdong.component.css
+++ b/src/app/hopdong/hopdong.component.css
@@ -10,6 +10,7 @@ body {
   border-radius: 10px;
   padding: 30px 20px;
   text-align: center;
+  left: 10px;top: 40%;
 }
 span{
     /* letter-spacing: 0.5px;
@@ -99,4 +100,30 @@ table {}
 }
 button {
   outline: none;
+}
+.example-box {
+
+  width: 200px;
+  height: 300px;
+  border: solid 1px #ccc;
+  color: rgba(0, 0, 0, 0.87);
+  cursor: move;
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background: none;
+  border-radius: 4px;
+  position: relative;
+  z-index: 1;
+  transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+              0 2px 2px 0 rgba(0, 0, 0, 0.14),
+              0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
+
+.example-box:active {
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+              0 8px 10px 1px rgba(0, 0, 0, 0.14),
+              0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
