--- a/src/app/hopdong/hopdong.component.html
+++ b/src/app/hopdong/hopdong.component.html
@@ -1,9 +1,12 @@
-<div style="position: fixed;left: 10px;top: 40%;" class="menu">
-  <button printSectionId="printdiv" ngxPrint styleSheetFile="assets/style.css" class="btn btn-info">IN</button><br><br>
+<div style="position: fixed;left: 10px;top: 40%;" class="menu example-box" cdkDrag>
+  <button printSectionId="printdiv" ngxPrint styleSheetFile="assets/style.css" class="btn btn-info">IN</button><br>
   <button (click)="Export2Doc('a4', 'hop-dong');" class="btn btn-success">DOWNLOAD</button><br><br>
   <button mat-raised-button color="warn" (click)="OpenQL()">Quản lý</button><br><br>
 
   <button mat-raised-button color="primary" (click)="OpenPopup()">Nhập dữ liệu</button><br><br>
+
+  <button mat-raised-button color="primary" (click)="CreateLSHopDong()">Luu hop dong</button><br><br>
+
 
 </div>
 <div id="printdiv" #myDiv>
