--- a/src/app/hopdong/popup/hopdong.popup.html
+++ b/src/app/hopdong/popup/hopdong.popup.html
@@ -56,7 +56,7 @@
                 <textarea matInput [(ngModel)]="ob.data.diaDiem" name="diadiem1" required rows="3"></textarea>
             </mat-form-field>
             <mat-form-field appearance="fill">
-                <mat-label>Choose a date</mat-label>
+                <mat-label>Ngày thực hiện</mat-label>
                 <input matInput [matDatepicker]="picker" [(ngModel)]="ob.data.timeThucHien" name="time">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
@@ -113,7 +113,7 @@
                     <td><input type="text" class="form-control" [(ngModel)]="addData.Dvt" placeholder="Đơn vị tính">
                     </td>
                     <td style="position: relative;" class="dongia"><input type="number" class="form-control" [(ngModel)]="addData.DonGia" placeholder="Đơn giá" (keyup)="Auto()">
-                        <span *ngIf="showTienChu" style="position: absolute;left: -20px;top: 65px;" class="tienchu">{{ showTienChu + 'đồng' }}</span>
+                        <span *ngIf="showTienChu" style="position: absolute;left: -20px;top: 65px;" class="tienchu">{{ showTienChu + ' đồng' }}</span>
                     </td>
                     <td><input type="number" min="0" class="form-control" [(ngModel)]="addData.SoLuong" placeholder="Số lượng"
                             (change)="Auto()"></td>
