--- a/src/app/hopdong/hopdong.component.html
+++ b/src/app/hopdong/hopdong.component.html
@@ -46,7 +46,7 @@
         style="font-family: 'Times New Roman', Times, serif;font-size: 12pt;margin: 0;position: relative;"><span>Đại diện</span><span style="position: absolute;left: 90pt;">: <b>{{data.value.gioiTinh==1? "Ông":"Bà" }} {{data.value.daiDienA}}</b> - Chức vụ: {{ data.value.chucVu }}</span></pre>
       <br>
       <pre
-        style="font-family: 'Times New Roman', Times, serif;font-size: 12pt;margin: 0;position: relative;"><b><span>Bên B</span><span style="position: absolute;left: 90pt;">: CÔNG TY TNHH CÔNG NGHỆ VÀ TRUYỀN THÔNG HÀ NỘI		</span></b></pre>
+        style="font-family: 'Times New Roman', Times, serif;font-size: 12pt;margin: 0;position: relative;"><span><b>Bên B</b></span><span style="position: absolute;left: 90pt;">: <b>CÔNG TY TNHH CÔNG NGHỆ VÀ TRUYỀN THÔNG HÀ NỘI</b></span></pre>
       <pre
         style="font-family: 'Times New Roman', Times, serif;font-size: 12pt;margin: 0;position: relative;"><span>Do Ông</span><span style="position: absolute;left: 90pt;">: Ông <b>Bùi Anh Duy</b> - Chức vụ: Giám Đốc </span></pre>
       <pre
