--- a/src/app/hopdong/hopdong.component.html
+++ b/src/app/hopdong/hopdong.component.html
@@ -13,7 +13,7 @@
     keyboard
     </span> Nhập dữ liệu</button><br><br>
 
-  <a style="width: 100%;text-decoration: none;" routerLink="hopdong" mat-raised-button color="primary" >Lịch sử hợp đồng</a><br><br>
+  <a style="width: 100%;text-decoration: none;" routerLink="lichsu" mat-raised-button color="primary" >Lịch sử hợp đồng</a><br><br>
 
 
 
